Name:                digestive-functors-snap-heist
Version:             0.1.0.0
Synopsis:            Snap backend for use of Heist with the digestive-functors library
Description:         This is a snap backend for the digestive-functors library, designed to work with Heist.

Homepage:            http://github.com/dbp/digestive-functors-snap-heist
License:             BSD3
License-file:        LICENSE
Author:              Daniel Patterson
Maintainer:          dbp@riseup.net
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6


Library
  Hs-source-dirs:    src
  Exposed-modules:   Text.Digestive.Backend.Snap.Heist
  Build-depends:     base >= 4 && < 5,
                     digestive-functors == 0.1.0.*,
                     snap-core >= 0.3,
                     bytestring >= 0.9,
                     utf8-string >= 0.3
